--- a/signin.html
+++ b/signin.html
@@ -126,12 +126,12 @@
         var email = document.getElementsByTagName("input")[0].value;
         var password = document.getElementsByTagName("input")[1].value;
 
-        if (email.lenght < 4) {
+        if (email.length < 4) {
             displayPopup("ERROR", "Enter a valid email.");
             return;
         }
 
-        if (password.lenght < 4) {
+        if (password.length < 4) {
             displayPopup("ERROR", "Please enter a password.");
             return;
         }
