--- a/signin.html
+++ b/signin.html
@@ -69,25 +69,15 @@
 
         @media screen and (min-width: 1000px) { #splashscreen { padding: 0; } }
 
-        @media screen and (min-width: 380px) {
-            #make-account { margin: 15% 0 0 0; }
-        }
+        @media screen and (min-width: 380px) { #make-account { margin: 15% 0 0 0; } }
 
-        @media screen and (min-width: 400px) {
-            input[type="password"] { margin: 1em 0 20% 0; }
-        }
+        @media screen and (min-width: 400px) { input[type="password"] { margin: 1em 0 20% 0; } }
 
-        @media screen and (min-width: 440px) {
-            input[type="password"] { margin: 1em 0 10% 0; }
-        }
+        @media screen and (min-width: 440px) { input[type="password"] { margin: 1em 0 10% 0; } }
 
-        @media screen and (min-width: 480px) {
-            input[type="text"] { margin: 55% 0 0 0; }
-        }
+        @media screen and (min-width: 480px) { input[type="text"] { margin: 55% 0 0 0; } }
 
-        @media screen and (min-width: 620px) {
-            input[type="text"] { margin: 35% 0 0 0; }
-        }
+        @media screen and (min-width: 620px) { input[type="text"] { margin: 35% 0 0 0; } }
 
         @media screen and (min-width: 825px) {
             input[type="text"] { margin: 30% 0 0 0; }
