--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sign up!</title>
+    <title>Sign Up!</title>
     <meta charset="utf-8">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -134,7 +134,7 @@
                 seethroughScreen.style.display = "none";
                 confirmBox.style.display = "none";
             }
-        }
+        };
 
         seethroughScreen.style.display = "initial";
         confirmBox.style.display = "initial";
