user ID and type is pushed to UIDs

--- a/edit.html
+++ b/edit.html
@@ -136,6 +136,7 @@
 
         user.once("value").then(function(dataSnapshot) {
             localStorage.currentUser = JSON.stringify(dataSnapshot.val());
+            firebase.database().ref("/UIDs/" + localStorage.uid).set(object.type);
             delete localStorage.email;
             delete localStorage.username;
         });
