fixed grid container padding

--- a/genres.html
+++ b/genres.html
@@ -20,7 +20,7 @@
 
         .row:before,
         .row:after {
-            content: "";
+            content: '';
             display: table;
             clear: both;
         }
@@ -41,7 +41,8 @@
         .grid-container {
             overflow-x: hidden;
             overflow-y: scroll;
-            height: 90%;
+            height: 100%;
+            padding-bottom: 100px;
         }
 
         .column h4 {
