linked edit.html with settings page

--- a/edit.html
+++ b/edit.html
@@ -125,10 +125,12 @@
             object.artistName = document.getElementById("artist-name").value;
             object.likes = 0;
             object.tracks = {
+                // What if there are already songs?
                 track0: {
                     likes: 0,
                     songName: "Track 0",
-                    emailThatLiked: "user@mail.com"
+                    emailThatLiked: "user@mail.com",
+                    imageURL: "url://"
                 }
             };
             user.set(object);
@@ -164,7 +166,7 @@
             button.onclick = function() {
                 seethroughScreen.style.display = "none";
                 confirmBox.style.display = "none";
-            }
+            };
         }
 
         seethroughScreen.style.display = "initial";
