--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="#" class="btn btn-positive btn-block">Edit Profile</a>
+        <a href="edit.html" class="btn btn-positive btn-block">Edit Profile</a>
         <a href="signin.html" class="btn btn-negative btn-block">Log Out</a>
     </div>
 
