TODO: add a transition when songs move up positions

--- a/discover.html
+++ b/discover.html
@@ -126,13 +126,30 @@
                 this.active = false;
             }
 
-            reference.set({ // What about .update?
+            sortChart();
+
+            reference.set({
                 songName: title,
                 likes: currentCount
             });
         });
 
         return centre;
+    }
+
+    function sortChart() { // TODO: Add a transition when moving positions
+        var items = document.getElementsByTagName("li");
+        items = [].slice.call(items);
+
+        var sortedItems = items.sort(function(a, b) {
+            var c = a.getElementsByClassName("lit-button")[0].childNodes[1].textContent;
+            var d = b.getElementsByClassName("lit-button")[0].childNodes[1].textContent;
+            return c < d;
+        });
+
+        sortedItems.forEach(function(child) {
+            document.getElementById("chart").appendChild(child);
+        });
     }
 
     window.onload = function() {
@@ -152,6 +169,8 @@
                     tableView.appendChild(generateItem(artist.artistName, track.songName, track.likes, ref));
                 }
             }
+
+            sortChart();
         });
     };
 </script>
